# ENIX

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt
main/enix/: enix.c  enix.h
main/enix/binloader/: binloader.c  binloader.h  syscalls.c  syscalls.h
main/enix/filesystem/: filesystem.c  filesystem.h
main/enix/shell/: shell.c  shell.h
source/: CMakeLists.txt  main.c
source/enix/: enix.c  enix.h
source/enix/filesystem/: filesystem.c
source/enix/shell/: shell.c
utils/cat/: Makefile  cat.c  make.bat  user.ld
