idf_component_register(
    SRCS
    	"main.c"
        "enix/enix.c"
        "enix/filesystem/filesystem.c"
        "enix/shell/shell.c"
        "enix/binloader/binloader.c"
        "enix/binloader/syscalls.c"
    INCLUDE_DIRS 
        "."
        "enix"
        "enix/filesystem"
        "enix/shell"
        "enix/binloader"
    REQUIRES 
        spiffs
        freertos
        driver
)